--- a/Frontend/src/Pages/LoginSignup.css
+++ b/Frontend/src/Pages/LoginSignup.css
@@ -123,3 +123,16 @@
   font-size: 14px;
   font-weight: 500;
 }
+
+.fgt-pass{
+  color: #ff0404;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.fgt-pass:hover {
+
+  color: rgb(39, 36, 36);
+}
