--- a/Frontend/src/Pages/LoginSignup.css
+++ b/Frontend/src/Pages/LoginSignup.css
@@ -3,7 +3,7 @@
 .loginsignup {
   width: 100%;
   height: 100vh;
-  background: url("../images/bg.png") center/cover no-repeat;
+  background: url("../images/Layer 0.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
