--- a/Frontend/src/Pages/LoginSignup.css
+++ b/Frontend/src/Pages/LoginSignup.css
@@ -34,7 +34,7 @@
   padding: 30px;
   background: rgba(255, 255, 255, 0.9); /* Adjusted opacity */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 15px;
 }
 
 .topic {
@@ -90,7 +90,7 @@
   font-weight: 600;
   cursor: pointer;
   border: 1px solid #004aad;
-  border-radius: 5px;
+  border-radius: 10px;
   transition: background 0.3s, color 0.3s;
 }
 
@@ -118,14 +118,14 @@
 }
 
 .error {
-  color: #ff0000;
+  color: #d75252;
   margin-top: 10px;
   font-size: 14px;
   font-weight: 500;
 }
 
 .fgt-pass{
-  color: #ff0404;
+  color: #d75252;
   font-weight: 600;
   cursor: pointer;
   margin-top: 20px;
@@ -134,5 +134,10 @@
 
 .fgt-pass:hover {
 
-  color: rgb(39, 36, 36);
+  color: rgb(255, 0, 0);
+}
+
+.nav-logo img {
+  width: 150px;
+  height: auto;
 }
